--- a/{{ cookiecutter.project_slug }}/templates/pages/home.html
+++ b/{{ cookiecutter.project_slug }}/templates/pages/home.html
@@ -2,4 +2,15 @@
 
 {% block content %}
   <h1>Helllloooooo!</h1>
+
+  {% if user.is_authenticated %}
+    <p>Username: {{user.username}}</p>
+    <p>Email: {{user.email}}</p>
+    <a href="{% url 'account_logout' %}">Logout</a>
+  {% else %}
+    <a href="{% url 'account_login' %}">Login</a>
+    <a href="{% url 'account_signup' %}">Signup</a>
+  {% endif %}
+
+
 {% endblock content %}
