integrate TailwindCSS and Webpack

--- a/{{ cookiecutter.project_slug }}/templates/pages/home.html
+++ b/{{ cookiecutter.project_slug }}/templates/pages/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Helllloooooo!</h1>
+  <h1 class="text-green-800 mb-10 text-xl font-bold">Helllloooooo!</h1>
 
   {% if user.is_authenticated %}
     <p>Username: {{user.username}}</p>
@@ -11,6 +11,5 @@
     <a href="{% url 'account_login' %}">Login</a>
     <a href="{% url 'account_signup' %}">Signup</a>
   {% endif %}
-
 
 {% endblock content %}
