--- a/{{ cookiecutter.project_slug }}/templates/base.html
+++ b/{{ cookiecutter.project_slug }}/templates/base.html
@@ -1,3 +1,5 @@
+{% load webpack_loader static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Basic Django Project</title>
+
+  {% stylesheet_pack 'index' %}
+  {% javascript_pack 'index' attrs='defer' %}
+
 </head>
 <body>
 
