--- a/{{ cookiecutter.project_slug }}/templates/pages/home.html
+++ b/{{ cookiecutter.project_slug }}/templates/pages/home.html
@@ -1,4 +1,4 @@
-{{ "{% extends 'base.html' %}" }}
+{{ '{% extends "base.html" %}' }}
 
 {{ "{% block content %}" }}
   <h1 class="mb-10 text-xl font-bold text-{{cookiecutter.project_main_color}}-800">Helllloooooo!</h1>
