--- a/{{ cookiecutter.project_slug }}/templates/base.html
+++ b/{{ cookiecutter.project_slug }}/templates/base.html
@@ -4,8 +4,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="{{cookiecutter.project_description}}" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Basic Django Project</title>
 
   {{ "{% stylesheet_pack 'index' %}" }}
@@ -15,7 +16,7 @@
 <body>
 
   {{ "{% block content %}" }}
-  {{ "{% endblock %}" }}
+  {{ "{% endblock content %}" }}
 
 </body>
 </html>
