--- a/{{ cookiecutter.project_slug }}/frontend/templates/base.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/base.html
@@ -2,21 +2,179 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="description" content="{{cookiecutter.project_description}}" />
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Basic Django Project</title>
+
+  <!-- Other meta stuff -->
+  <link rel="apple-touch-icon" href="{% static 'vendors/favicon/logo.png' %}" />
+  <link rel="apple-touch-icon" href="{% static 'vendors/favicon/logo.png' %}" />
+  <link rel="icon" type="image/png" sizes="16x16 32x32 500x500" href="{% static 'vendors/favicon/logo.png' %}" />
+
+  {{ "{% block meta %}" }}
+  <title>{{ cookiecutter.project_name }}</title>
+  <meta name="description" content="{{ cookiecutter.project_description }}" />
+  <meta name="keywords" content="django" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://{{ request.get_host }}/" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="{{ cookiecutter.project_name }}" />
+  <meta property="og:url" content="https://{{ request.get_host }}/" />
+  <meta property="og:description" content="{{ cookiecutter.project_description }}" />
+  <meta property="og:image" content="https://{{ request.get_host }}{% static 'vendors/images/logo.png' %}" />
+  <meta property="og:locale" content="en_US" />
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:creator" content="@rasulkireev" />
+  <meta name="twitter:site" content="@rasulkireev" />
+  <meta name="twitter:title" content="{{ cookiecutter.project_name }}" />
+  <meta name="twitter:description" content="{{ cookiecutter.project_description }}" />
+  <meta name="twitter:image" content="https://{{ request.get_host }}{% static 'vendors/images/logo.png' %}" />
+  {{ "{% endblock meta %}" }}
 
   {{ "{% stylesheet_pack 'index' %}" }}
   {{ "{% javascript_pack 'index' attrs='defer' %}" }}
 
+  <script defer data-domain="." src="https://plausible.cr.lvtd.dev/js/script.js"></script>
+  <script>
+    !function (t, e) { var o, n, p, r; e.__SV || (window.posthog = e, e._i = [], e.init = function (i, s, a) { function g(t, e) { var o = e.split("."); 2 == o.length && (t = t[o[0]], e = o[1]), t[e] = function () { t.push([e].concat(Array.prototype.slice.call(arguments, 0))) } } (p = t.createElement("script")).type = "text/javascript", p.async = !0, p.src = s.api_host + "/static/array.js", (r = t.getElementsByTagName("script")[0]).parentNode.insertBefore(p, r); var u = e; for (void 0 !== a ? u = e[a] = [] : a = "posthog", u.people = u.people || [], u.toString = function (t) { var e = "posthog"; return "posthog" !== a && (e += "." + a), t || (e += " (stub)"), e }, u.people.toString = function () { return u.toString(1) + ".people (stub)" }, o = "capture identify alias people.set people.set_once set_config register register_once unregister opt_out_capturing has_opted_out_capturing opt_in_capturing reset isFeatureEnabled onFeatureFlags getFeatureFlag getFeatureFlagPayload reloadFeatureFlags group updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures getActiveMatchingSurveys getSurveys".split(" "), n = 0; n < o.length; n++)g(u, o[n]); e._i.push([i, s, a]) }, e.__SV = 1) }(document, window.posthog || []);
+    posthog.init('.', { api_host: 'https://app.posthog.com' })
+  </script>
 </head>
-<body>
 
-  {{ "{% block content %}" }}
-  {{ "{% endblock content %}" }}
+<body>
+  <div data-controller="dropdown" class="bg-white">
+    <header class="bg-white">
+      <nav class="flex items-center justify-between p-6 mx-auto max-w-7xl lg:px-8" aria-label="Global">
+        <div class="flex items-center gap-x-12">
+          <a href="{% url 'home' %}" class="-m-1.5 p-1.5 flex flex-row space-x-2 items-center justify-between">
+            <img class="w-auto h-8" src="{% static 'vendors/images/logo.png' %}" alt="{{ cookiecutter.project_name }} Logo" />
+            <span class="text-base font-semibold text-gray-700">{{ cookiecutter.project_name }}</span>
+          </a>
+        </div>
+        <div class="flex lg:hidden">
+          <button data-action="dropdown#toggle click@window->dropdown#hide" type="button"
+            class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
+            <span class="sr-only">Open main menu</span>
+            <svg class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+              aria-hidden="true">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+            </svg>
+          </button>
+        </div>
+        <div class="items-center hidden lg:flex lg:gap-x-12">
+          {{ "{% if user.is_authenticated %}" }}
+          <!-- Profile dropdown -->
+          <div data-controller="dropdown" class="relative ml-3">
+            <div>
+              <button type="button" data-action="dropdown#toggle click@window->dropdown#hide"
+                class="flex text-sm bg-gray-800 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white"
+                id="user-menu-button" aria-expanded="false" aria-haspopup="true">
+                <span class="sr-only">Open user menu</span>
+                <img class="object-cover w-10 h-10 p-1 bg-gray-100 border-2 border-gray-500 rounded-full"
+                  src="{% static 'vendors/images/unknown-man.png' %}" alt="No Personal Photo" />
+              </button>
+            </div>
+            <div data-dropdown-target="menu"
+              class="absolute right-0 z-10 w-48 py-1 mt-2 origin-top-right bg-white rounded-md shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
+              role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
+              {{ "{% if user.is_authenticated %}" }}
+              <a href="{% url 'settings' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-300"
+                role="menuitem" data-action="dropdown#toggle" tabindex="-1" id="user-menu-item-0">Settings</a>
+              {{ "{% endif %}" }}
+              <!-- <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a> -->
+              <a href="{% url 'account_logout' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-300"
+                role="menuitem" data-action="dropdown#toggle" tabindex="-1" id="user-menu-item-2">Sign out</a>
+            </div>
+          </div>
+          {{ "{% else %}" }}
+          <a href="{% url 'account_login' %}" class="text-base font-semibold leading-6 text-gray-900">
+              Log in <span aria-hidden="true">&rarr;</span>
+          </a>
+          {{ "{% endif %}" }}
+        </div>
+      </nav>
+
+      <!-- Mobile menu, show/hide based on menu open state. -->
+      <div data-dropdown-target="menu" class="lg:hidden" role="dialog" aria-modal="true">
+        <!-- Background backdrop, show/hide based on slide-over state. -->
+        <div class="fixed inset-0 z-10"></div>
+        <div
+          class="fixed inset-y-0 right-0 z-10 w-full px-6 py-6 overflow-y-auto bg-white sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
+          <div class="flex items-center justify-between">
+            <a href="{% url 'home' %}" class="-m-1.5 p-1.5">
+              <span class="sr-only">{{ cookiecutter.project_name }}</span>
+              <img class="w-auto h-8" src="{% static 'vendors/images/logo.png' %}" alt="{{ cookiecutter.project_name }} Logo" />
+            </a>
+            <button data-action="dropdown#toggle click@window->dropdown#hide" type="button"
+              class="-m-2.5 rounded-md p-2.5 text-gray-700">
+              <span class="sr-only">Close menu</span>
+              <svg class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+              </svg>
+            </button>
+          </div>
+          <div class="flow-root mt-6">
+            <div class="-my-6 divide-y divide-gray-500/10">
+              <div class="py-6 space-y-2">
+                <a href="{% url 'posts' %}"
+                  class="block px-3 py-2 -mx-3 text-base font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50">Jobs</a>
+                {{ "{% if user.is_authenticated %}" }}
+                <a href="{% url 'settings' %}"
+                  class="block px-3 py-2 -mx-3 text-base font-semibold leading-7 text-gray-900 rounded-lg hover:bg-gray-50">Settings</a>
+                {{ "{% endif %}" }}
+
+              </div>
+              <div class="py-6">
+                <a href="{% url 'account_login' %}" class="-mx-3 block rounded-lg py-2.5 px-3 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50">Log in</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <div class="px-2 sm:px-0">
+      {{ "{% block content %}" }}
+      {{ "{% endblock content %}" }}
+    </div>
+
+    <footer class="bg-white">
+      <div class="px-6 py-12 mx-auto max-w-7xl md:flex md:items-center md:justify-between lg:px-8">
+        <div class="mt-8 md:mt-0">
+          <p class="text-xs leading-5 text-center text-gray-500">
+            &copy; 2024 LVTD, LLC. All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+
+  </div>
+
+  {{ "{% block schema %}" }}
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "{{ cookiecutter.project_name }}",
+      "description": "{{ cookiecutter.project_description }}",
+      "thumbnailUrl": "https://{{ request.get_host }}{% static 'vendors/images/logo.png' %}",
+      "url": "https://{{ request.get_host }}/",
+      "author": {
+        "@type": "Person",
+        "givenName": "Rasul",
+        "familyName": "Kireev",
+        "url": "https://rasulkireev.com/"
+      }
+    }
+    </script>
+  {{ "{% endblock schema %}" }}
 
 </body>
+
 </html>
