--- a/{{ cookiecutter.project_slug }}/frontend/templates/account/logout.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/account/logout.html
@@ -1,16 +1,15 @@
-{% raw %}
-{% extends "base.html" %}
-{% load widget_tweaks %}
+{{ "{% extends 'base.html' %}" }}
+{{ "{% load widget_tweaks %}" }}
 
-{% block content %}
+{{ "{% block content %}" }}
     <div class="mx-auto my-4 prose md:my-10 lg:prose-lg">
         <h1 class="text-center">Please confirm Sign Out</h1>
-        <form method="post" class="flex flex-row justify-center" action="{% url 'account_logout' %}">
-            {% csrf_token %}
+        <form method="post" class="flex flex-row justify-center" action="{% raw %}{% url 'account_logout' %}{%- endraw %}">
+            {{ "{% csrf_token %}" }}
 
-            {% if redirect_field_value %}
-                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-            {% endif %}
+            {{ "{% if redirect_field_value %}" }}
+                <input type="hidden" name="{% raw %}{{ redirect_field_name }}{%- endraw %}" value="{% raw %}{{ redirect_field_value }}{%- endraw %}"/>
+            {{ "{% endif %}" }}
 
             <button class="inline-flex items-center px-6 py-3 text-base font-medium text-white bg-red-600 border border-transparent border-solid rounded-md shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
                     type="submit">
@@ -18,5 +17,4 @@
             </button>
         </form>
     </div>
-{% endblock content %}
-{%- endraw %}
+{{ "{% endblock content %}" }}
