--- a/{{ cookiecutter.project_slug }}/frontend/templates/account/login.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/account/login.html
@@ -2,8 +2,8 @@
 {{ '{% load widget_tweaks %}' }}
 
 {{ "{% block content %}" }}
-    <div class="flex items-center justify-center px-4 py-12 my-4 sm:px-6 lg:px-8">
-        <div class="w-full max-w-md space-y-8">
+    <div class="flex justify-center items-center px-4 py-12 my-4 sm:px-6 lg:px-8">
+        <div class="space-y-8 w-full max-w-md">
             <div>
                 <h2 class="mt-6 text-3xl font-extrabold text-center text-gray-900">
                     Sign in to your account
@@ -23,12 +23,12 @@
                     <div>
                         {{ "{{ form.login.errors | safe }}" }}
                         <label for="username" class="sr-only">Username</label>
-                        {{ '{% render_field form.login placeholder="Username" id="username" name="username" type="text" autocomplete="username" required=True class="relative block w-full px-3 py-2 text-gray-900 placeholder-gray-500 border border-gray-300 rounded-none appearance-none rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %}' }}
+                        {{ '{% render_field form.login placeholder="Username" id="username" name="username" type="text" autocomplete="username" required=True class="block relative px-3 py-2 w-full placeholder-gray-500 text-gray-900 rounded-none rounded-t-md border border-gray-300 appearance-none focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %}' }}
                     </div>
                     <div>
                         {{ "{{ form.password.errors | safe }}" }}
                         <label for="password" class="sr-only">Password</label>
-                        {{ '{% render_field form.password id="password" name="password" type="password" autocomplete="current-password" required="True" class="relative block w-full px-3 py-2 text-gray-900 placeholder-gray-500 border border-gray-300 rounded-none appearance-none rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password" %}' }}
+                        {{ '{% render_field form.password id="password" name="password" type="password" autocomplete="current-password" required="True" class="block relative px-3 py-2 w-full placeholder-gray-500 text-gray-900 rounded-none rounded-b-md border border-gray-300 appearance-none focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password" %}' }}
                     </div>
                 </div>
 
@@ -39,7 +39,7 @@
                 <div>
                     <button type="submit"
                             class="relative flex justify-center w-full px-4 py-2 text-sm font-medium text-white bg-{{cookiecutter.project_main_color}}-600 border border-transparent border-solid rounded-md group hover:bg-{{cookiecutter.project_main_color}}-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-{{cookiecutter.project_main_color}}-500">
-                        <span class="absolute inset-y-0 left-0 flex items-center pl-3">
+                        <span class="flex absolute inset-y-0 left-0 items-center pl-3">
                             <!-- Heroicon name: solid/lock-closed -->
                             <svg class="w-5 h-5 text-{{cookiecutter.project_main_color}}-500 group-hover:text-{{cookiecutter.project_main_color}}-400"
                                  xmlns="http://www.w3.org/2000/svg"
@@ -55,6 +55,27 @@
                     </button>
                 </div>
             </form>
+
+            <div>
+              <div class="relative mt-10">
+                <div class="flex absolute inset-0 items-center" aria-hidden="true">
+                  <div class="w-full border-t border-gray-200"></div>
+                </div>
+                <div class="flex relative justify-center text-sm font-medium leading-6">
+                  <span class="px-6 text-gray-900 bg-white">Or continue with</span>
+                </div>
+              </div>
+
+              <div class="grid grid-cols-1 gap-4 mt-6">
+                <a href="{% raw %}{% provider_login_url 'github' %}{%- endraw %}" class="flex gap-3 justify-center items-center px-3 py-2 w-full text-sm font-semibold text-gray-900 bg-white rounded-md ring-1 ring-inset ring-gray-300 shadow-sm hover:bg-gray-50 focus-visible:ring-transparent">
+                  <svg class="h-5 w-5 fill-[#24292F]" fill="currentColor" viewBox="0 0 20 20" aria-hidden="true">
+                    <path fill-rule="evenodd" d="M10 0C4.477 0 0 4.484 0 10.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0110 4.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.203 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.942.359.31.678.921.678 1.856 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0020 10.017C20 4.484 15.522 0 10 0z" clip-rule="evenodd" />
+                  </svg>
+                  <span class="text-sm font-semibold leading-6">GitHub</span>
+                </a>
+              </div>
+            </div>
+
         </div>
     </div>
 {{ "{% endblock content %}" }}
