--- a/{{ cookiecutter.project_slug }}/frontend/templates/account/login.html
+++ b/{{ cookiecutter.project_slug }}/frontend/templates/account/login.html
@@ -1,5 +1,6 @@
 {{ '{% extends "base.html" %}' }}
 {{ '{% load widget_tweaks %}' }}
+{{' {% load socialaccount %}' }}
 
 {{ "{% block content %}" }}
     <div class="flex justify-center items-center px-4 py-12 my-4 sm:px-6 lg:px-8">
